C:/Program Files/Git/dev criado

--- a/pagina_mestre_1.html
+++ b/pagina_mestre_1.html
@@ -1,4 +1,3 @@
-const char index_html[] PROGMEM = R"rawliteral(
 <!DOCTYPE HTML><html>
 <head>
   <title>ESP-NOW DASHBOARD</title>
@@ -85,4 +84,4 @@ if (!!window.EventSource) {
 }
 </script>
 </body>
-</html>)rawliteral";
+</html>
